# tauri-starter

./: .env  .gitignore  README.md  auto-imports.d.ts  components.d.ts  eslint.config.js  loading.html  package.json  pnpm-lock.yaml  shims.global.d.ts  tsconfig.json  uno.config.ts  vite.config.ts
config/: index.ts
server/: index.ts
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  loading.json
src-tauri/src/: lib.rs  tray.rs
src/assets/style/: index.less
src/components/: AppBar.vue  GitHub.vue
src/composables/: useLocale.ts  useNaiveTheme.ts  useTauriDialog.ts  useTauriFS.ts  useTauriNotifications.ts  useTauriStore.ts  useTauriWindow.ts
src/layouts/: default.vue
src/locales/: en-US.json  zh-CN.json
src/pages/: index.vue  setting.vue
src/stores/: useAppStore.ts
src/utils/: http.ts  index.ts  tauri-polyfill.ts  useHttp.ts
