[package]
name = "tauri-starter"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_starter_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [
  "macos-private-api",
  "tray-icon",
  "unstable"
] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-store = "2.0.0-rc"
tauri-plugin-http = "2.0.0-rc"

serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tauri-plugin-websocket = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-notification = "2.0.0-rc"
