[package]
name = "tauri-starter"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_starter_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "macos-private-api",
  "tray-icon",
  "unstable"
] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tauri-plugin-autostart = "2" # https://tauri.app/plugin/autostart/
tauri-plugin-clipboard-manager = "2" # https://tauri.app/plugin/clipboard/
tauri-plugin-dialog = "2" # https://tauri.app/plugin/dialog/
tauri-plugin-fs = "2" # https://tauri.app/plugin/file-system/
tauri-plugin-http = "2" # https://tauri.app/plugin/http-client/
tauri-plugin-notification = "2" # https://tauri.app/plugin/notification/
tauri-plugin-os = "2" # https://tauri.app/plugin/os-info/
tauri-plugin-positioner = "2" # https://tauri.app/plugin/positioner/
tauri-plugin-process = "2" # https://tauri.app/plugin/process/
tauri-plugin-shell = "2" # https://tauri.app/plugin/shell/
tauri-plugin-store = "2" # https://tauri.app/plugin/store/
tauri-plugin-upload = "2" # https://tauri.app/plugin/upload/
tauri-plugin-websocket = "2" # https://tauri.app/plugin/websocket/

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2" # https://tauri.app/plugin/global-shortcut/
tauri-plugin-updater = "2" # https://tauri.app/plugin/updater/
